# kestrel-sdk

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/kestrel/: __init__.py  async_client.py  auth.py  client.py  exceptions.py  models.py
src/kestrel/workflows/: __init__.py  actions.py  approvals.py  builder.py  conditions.py  triggers.py  types.py
tests/: test_client.py
